// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs/kernel serializes and prints CombinedAccumulatedData 1`] = `
"aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x801
old_value: 0x802
new_value: 0x803
 leaf_index: 0x802
old_value: 0x803
new_value: 0x804
 leaf_index: 0x803
old_value: 0x804
new_value: 0x805
 leaf_index: 0x804
old_value: 0x805
new_value: 0x806
 ]
public_data_reads:
[ leaf_index: 0x901
value: 0x902
 leaf_index: 0x902
value: 0x903
 leaf_index: 0x903
value: 0x904
 leaf_index: 0x904
value: 0x905
 ]
"
`;

exports[`structs/kernel serializes and prints EcdsaSignature 1`] = `"{ 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }"`;

exports[`structs/kernel serializes and prints SignedTxRequest 1`] = `
"tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }
"
`;

exports[`structs/kernel serializes and prints previous_kernel_data 1`] = `
"public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x801
old_value: 0x802
new_value: 0x803
 leaf_index: 0x802
old_value: 0x803
new_value: 0x804
 leaf_index: 0x803
old_value: 0x804
new_value: 0x805
 leaf_index: 0x804
old_value: 0x805
new_value: 0x806
 ]
public_data_reads:
[ leaf_index: 0x901
value: 0x902
 leaf_index: 0x902
value: 0x903
 leaf_index: 0x903
value: 0x904
 leaf_index: 0x904
value: 0x905
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]
"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_init 1`] = `
"signed_tx_request:
tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }

private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1311 0x1312 0x1313 0x1314 ]
emitted_events: [ 0x1211 0x1212 0x1213 0x1214 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
historic_private_data_tree_root: 0x2011
historic_nullifier_tree_root: 0x2111
historic_contract_tree_root: 0x1911
historic_l1_to_l2_messages_tree_root: 0x2211
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0

private_call_stack_preimages:
[ contract_address: 0x1011
function_data: function_selector: 1012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1321 0x1322 0x1323 0x1324 ]
emitted_events: [ 0x1221 0x1222 0x1223 0x1224 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
historic_private_data_tree_root: 0x2021
historic_nullifier_tree_root: 0x2121
historic_contract_tree_root: 0x1921
historic_l1_to_l2_messages_tree_root: 0x2221
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1322 0x1323 0x1324 0x1325 ]
emitted_events: [ 0x1222 0x1223 0x1224 0x1225 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
historic_private_data_tree_root: 0x2022
historic_nullifier_tree_root: 0x2122
historic_contract_tree_root: 0x1922
historic_l1_to_l2_messages_tree_root: 0x2222
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1323 0x1324 0x1325 0x1326 ]
emitted_events: [ 0x1223 0x1224 0x1225 0x1226 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
historic_private_data_tree_root: 0x2023
historic_nullifier_tree_root: 0x2123
historic_contract_tree_root: 0x1923
historic_l1_to_l2_messages_tree_root: 0x2223
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1324 0x1325 0x1326 0x1327 ]
emitted_events: [ 0x1224 0x1225 0x1226 0x1227 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
historic_private_data_tree_root: 0x2024
historic_nullifier_tree_root: 0x2124
historic_contract_tree_root: 0x1924
historic_l1_to_l2_messages_tree_root: 0x2224
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness:
leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 ]

portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_inner 1`] = `
"previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x801
old_value: 0x802
new_value: 0x803
 leaf_index: 0x802
old_value: 0x803
new_value: 0x804
 leaf_index: 0x803
old_value: 0x804
new_value: 0x805
 leaf_index: 0x804
old_value: 0x805
new_value: 0x806
 ]
public_data_reads:
[ leaf_index: 0x901
value: 0x902
 leaf_index: 0x902
value: 0x903
 leaf_index: 0x903
value: 0x904
 leaf_index: 0x904
value: 0x905
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1311 0x1312 0x1313 0x1314 ]
emitted_events: [ 0x1211 0x1212 0x1213 0x1214 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
historic_private_data_tree_root: 0x2011
historic_nullifier_tree_root: 0x2111
historic_contract_tree_root: 0x1911
historic_l1_to_l2_messages_tree_root: 0x2211
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0

private_call_stack_preimages:
[ contract_address: 0x1011
function_data: function_selector: 1012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1321 0x1322 0x1323 0x1324 ]
emitted_events: [ 0x1221 0x1222 0x1223 0x1224 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
historic_private_data_tree_root: 0x2021
historic_nullifier_tree_root: 0x2121
historic_contract_tree_root: 0x1921
historic_l1_to_l2_messages_tree_root: 0x2221
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1322 0x1323 0x1324 0x1325 ]
emitted_events: [ 0x1222 0x1223 0x1224 0x1225 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
historic_private_data_tree_root: 0x2022
historic_nullifier_tree_root: 0x2122
historic_contract_tree_root: 0x1922
historic_l1_to_l2_messages_tree_root: 0x2222
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1323 0x1324 0x1325 0x1326 ]
emitted_events: [ 0x1223 0x1224 0x1225 0x1226 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
historic_private_data_tree_root: 0x2023
historic_nullifier_tree_root: 0x2123
historic_contract_tree_root: 0x1923
historic_l1_to_l2_messages_tree_root: 0x2223
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1324 0x1325 0x1326 0x1327 ]
emitted_events: [ 0x1224 0x1225 0x1226 0x1227 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
historic_private_data_tree_root: 0x2024
historic_nullifier_tree_root: 0x2124
historic_contract_tree_root: 0x1924
historic_l1_to_l2_messages_tree_root: 0x2224
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


is_execution_request: 0
 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness:
leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 ]

portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x801
old_value: 0x802
new_value: 0x803
 leaf_index: 0x802
old_value: 0x803
new_value: 0x804
 leaf_index: 0x803
old_value: 0x804
new_value: 0x805
 leaf_index: 0x804
old_value: 0x805
new_value: 0x806
 ]
public_data_reads:
[ leaf_index: 0x901
value: 0x902
 leaf_index: 0x902
value: 0x903
 leaf_index: 0x903
value: 0x904
 leaf_index: 0x904
value: 0x905
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1
"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs 1`] = `
"previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
new_l2_to_l1_msgs:
[ 0x501 0x502 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests:
[ leaf_index: 0x801
old_value: 0x802
new_value: 0x803
 leaf_index: 0x802
old_value: 0x803
new_value: 0x804
 leaf_index: 0x803
old_value: 0x804
new_value: 0x805
 leaf_index: 0x804
old_value: 0x805
new_value: 0x806
 ]
public_data_reads:
[ leaf_index: 0x901
value: 0x902
 leaf_index: 0x902
value: 0x903
 leaf_index: 0x903
value: 0x904
 leaf_index: 0x904
value: 0x905
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
private_kernel_vk_tree_root: 0x105


tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

public_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1011
storage_contract_address: 0x1001
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
emitted_events: [ 0x1311 0x1312 0x1313 0x1314 ]
contract_storage_update_requests: [ storage_slot: 0x1411
old_value: 0x1412
new_value: 0x1413
 storage_slot: 0x1412
old_value: 0x1413
new_value: 0x1414
 storage_slot: 0x1413
old_value: 0x1414
new_value: 0x1415
 storage_slot: 0x1414
old_value: 0x1415
new_value: 0x1416
 ]
contract_storage_reads: [ storage_slot: 0x1511
current_value: 0x1512
 storage_slot: 0x1512
current_value: 0x1513
 storage_slot: 0x1513
current_value: 0x1514
 storage_slot: 0x1514
current_value: 0x1515
 ]
public_call_stack: [ 0x221b5d639a096f94a75ea1b7cff7c04c36758710754384739a6abf9a95fd473e 0x28b2063ab3d7ddd367136806a616911bbdb883216a739af593316253fcd02609 0x1098d33ee4483f5f87285c2ed81f45e775a97ee77714e251fd404fff12991d16 0x27659ad5da78f32a78f9958338b5ab5bc67a9762f2821fff95892d0f560f4a82 ]
new_l2_to_l1_msgs: [ 0x1711 0x1712 ]
historic_public_data_tree_root: 0x1811
prover_address: 0x1812

is_execution_request: 0

public_call_stack_preimages:
[ contract_address: 0x1301
function_data: function_selector: 1302
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1301
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1411
return_values: [ 0x1511 0x1512 0x1513 0x1514 ]
emitted_events: [ 0x1611 0x1612 0x1613 0x1614 ]
contract_storage_update_requests: [ storage_slot: 0x1711
old_value: 0x1712
new_value: 0x1713
 storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 ]
contract_storage_reads: [ storage_slot: 0x1811
current_value: 0x1812
 storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 ]
public_call_stack: [ 0x1911 0x1912 0x1913 0x1914 ]
new_l2_to_l1_msgs: [ 0x1a11 0x1a12 ]
historic_public_data_tree_root: 0x1b11
prover_address: 0x1b12

is_execution_request: 0
 contract_address: 0x1302
function_data: function_selector: 1303
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1302
portal_contract_address: 0x1414141414141414141414141414141414141414
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1412
return_values: [ 0x1512 0x1513 0x1514 0x1515 ]
emitted_events: [ 0x1612 0x1613 0x1614 0x1615 ]
contract_storage_update_requests: [ storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 ]
contract_storage_reads: [ storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 ]
public_call_stack: [ 0x1912 0x1913 0x1914 0x1915 ]
new_l2_to_l1_msgs: [ 0x1a12 0x1a13 ]
historic_public_data_tree_root: 0x1b12
prover_address: 0x1b13

is_execution_request: 0
 contract_address: 0x1303
function_data: function_selector: 1304
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1303
portal_contract_address: 0x1515151515151515151515151515151515151515
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1413
return_values: [ 0x1513 0x1514 0x1515 0x1516 ]
emitted_events: [ 0x1613 0x1614 0x1615 0x1616 ]
contract_storage_update_requests: [ storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 ]
contract_storage_reads: [ storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 ]
public_call_stack: [ 0x1913 0x1914 0x1915 0x1916 ]
new_l2_to_l1_msgs: [ 0x1a13 0x1a14 ]
historic_public_data_tree_root: 0x1b13
prover_address: 0x1b14

is_execution_request: 0
 contract_address: 0x1304
function_data: function_selector: 1305
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x1001
storage_contract_address: 0x1304
portal_contract_address: 0x1616161616161616161616161616161616161616
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1414
return_values: [ 0x1514 0x1515 0x1516 0x1517 ]
emitted_events: [ 0x1614 0x1615 0x1616 0x1617 ]
contract_storage_update_requests: [ storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x1717
old_value: 0x1718
new_value: 0x1719
 ]
contract_storage_reads: [ storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x1817
current_value: 0x1818
 ]
public_call_stack: [ 0x1914 0x1915 0x1916 0x1917 ]
new_l2_to_l1_msgs: [ 0x1a14 0x1a15 ]
historic_public_data_tree_root: 0x1b14
prover_address: 0x1b15

is_execution_request: 0
 ]
proof:
[ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x1002
bytecode_hash: 0x1003

"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs_no_previous_kernel 1`] = `
"signed_tx_request:
tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args_hash: 0x201
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202, 3 }

public_call:
call_stack_item:
contract_address: 0x101
function_data: function_selector: 258
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x111
storage_contract_address: 0x101
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x211
return_values: [ 0x311 0x312 0x313 0x314 ]
emitted_events: [ 0x411 0x412 0x413 0x414 ]
contract_storage_update_requests: [ storage_slot: 0x511
old_value: 0x512
new_value: 0x513
 storage_slot: 0x512
old_value: 0x513
new_value: 0x514
 storage_slot: 0x513
old_value: 0x514
new_value: 0x515
 storage_slot: 0x514
old_value: 0x515
new_value: 0x516
 ]
contract_storage_reads: [ storage_slot: 0x611
current_value: 0x612
 storage_slot: 0x612
current_value: 0x613
 storage_slot: 0x613
current_value: 0x614
 storage_slot: 0x614
current_value: 0x615
 ]
public_call_stack: [ 0x9bb57b57c918598816731554386a857fd26044897b7ab5877e1fe3b2b0dd99f 0x10c7590d923b0d4e162ac2bbdb9c612bcf0221899f44adf8ff1b24212a75b790 0x1f734ab14b419531afd3d8617f7f0c2e3aaa735b10b1d81a906e6874bbdffb1b 0x239900af32e3ec82b173315afdcc3494fc4d00d50d4c16eb301292193a84e72a ]
new_l2_to_l1_msgs: [ 0x811 0x812 ]
historic_public_data_tree_root: 0x911
prover_address: 0x912

is_execution_request: 0

public_call_stack_preimages:
[ contract_address: 0x401
function_data: function_selector: 402
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x401
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x511
return_values: [ 0x611 0x612 0x613 0x614 ]
emitted_events: [ 0x711 0x712 0x713 0x714 ]
contract_storage_update_requests: [ storage_slot: 0x811
old_value: 0x812
new_value: 0x813
 storage_slot: 0x812
old_value: 0x813
new_value: 0x814
 storage_slot: 0x813
old_value: 0x814
new_value: 0x815
 storage_slot: 0x814
old_value: 0x815
new_value: 0x816
 ]
contract_storage_reads: [ storage_slot: 0x911
current_value: 0x912
 storage_slot: 0x912
current_value: 0x913
 storage_slot: 0x913
current_value: 0x914
 storage_slot: 0x914
current_value: 0x915
 ]
public_call_stack: [ 0xa11 0xa12 0xa13 0xa14 ]
new_l2_to_l1_msgs: [ 0xb11 0xb12 ]
historic_public_data_tree_root: 0xc11
prover_address: 0xc12

is_execution_request: 0
 contract_address: 0x402
function_data: function_selector: 403
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x402
portal_contract_address: 0x1414141414141414141414141414141414141414
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x512
return_values: [ 0x612 0x613 0x614 0x615 ]
emitted_events: [ 0x712 0x713 0x714 0x715 ]
contract_storage_update_requests: [ storage_slot: 0x812
old_value: 0x813
new_value: 0x814
 storage_slot: 0x813
old_value: 0x814
new_value: 0x815
 storage_slot: 0x814
old_value: 0x815
new_value: 0x816
 storage_slot: 0x815
old_value: 0x816
new_value: 0x817
 ]
contract_storage_reads: [ storage_slot: 0x912
current_value: 0x913
 storage_slot: 0x913
current_value: 0x914
 storage_slot: 0x914
current_value: 0x915
 storage_slot: 0x915
current_value: 0x916
 ]
public_call_stack: [ 0xa12 0xa13 0xa14 0xa15 ]
new_l2_to_l1_msgs: [ 0xb12 0xb13 ]
historic_public_data_tree_root: 0xc12
prover_address: 0xc13

is_execution_request: 0
 contract_address: 0x403
function_data: function_selector: 404
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x403
portal_contract_address: 0x1515151515151515151515151515151515151515
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x513
return_values: [ 0x613 0x614 0x615 0x616 ]
emitted_events: [ 0x713 0x714 0x715 0x716 ]
contract_storage_update_requests: [ storage_slot: 0x813
old_value: 0x814
new_value: 0x815
 storage_slot: 0x814
old_value: 0x815
new_value: 0x816
 storage_slot: 0x815
old_value: 0x816
new_value: 0x817
 storage_slot: 0x816
old_value: 0x817
new_value: 0x818
 ]
contract_storage_reads: [ storage_slot: 0x913
current_value: 0x914
 storage_slot: 0x914
current_value: 0x915
 storage_slot: 0x915
current_value: 0x916
 storage_slot: 0x916
current_value: 0x917
 ]
public_call_stack: [ 0xa13 0xa14 0xa15 0xa16 ]
new_l2_to_l1_msgs: [ 0xb13 0xb14 ]
historic_public_data_tree_root: 0xc13
prover_address: 0xc14

is_execution_request: 0
 contract_address: 0x404
function_data: function_selector: 405
is_private: 0
is_constructor: 0

public_inputs: call_context: msg_sender: 0x101
storage_contract_address: 0x404
portal_contract_address: 0x1616161616161616161616161616161616161616
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x514
return_values: [ 0x614 0x615 0x616 0x617 ]
emitted_events: [ 0x714 0x715 0x716 0x717 ]
contract_storage_update_requests: [ storage_slot: 0x814
old_value: 0x815
new_value: 0x816
 storage_slot: 0x815
old_value: 0x816
new_value: 0x817
 storage_slot: 0x816
old_value: 0x817
new_value: 0x818
 storage_slot: 0x817
old_value: 0x818
new_value: 0x819
 ]
contract_storage_reads: [ storage_slot: 0x914
current_value: 0x915
 storage_slot: 0x915
current_value: 0x916
 storage_slot: 0x916
current_value: 0x917
 storage_slot: 0x917
current_value: 0x918
 ]
public_call_stack: [ 0xa14 0xa15 0xa16 0xa17 ]
new_l2_to_l1_msgs: [ 0xb14 0xb15 ]
historic_public_data_tree_root: 0xc14
prover_address: 0xc15

is_execution_request: 0
 ]
proof:
[ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x102
bytecode_hash: 0x103

historic_tree_roots:
private_historic_tree_roots: private_data_tree_root: 0x201
nullifier_tree_root: 0x202
contract_tree_root: 0x203
l1_to_l2_messages_tree_root: 0x204
private_kernel_vk_tree_root: 0x205


"
`;
